Started writing probability code